--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Layout Responsive</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a095a4bfbe.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/8258ac6aa5.js" crossorigin="anonymous"></script>
 
 </head>
 <body class="debug">
@@ -17,15 +17,20 @@
             <div class="container">
                 <div class="row justify-between align-items-center">
                     <div class="col">
-                        <img src="./img/logo.png" alt="">
+                        <figure>
+                            <img src="./img/logo.png" alt="">
+                        </figure>
                     </div>
                     <div class="col">
+                        <div class="icon-menu">
+                            <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+                        </div>
                         <ul class="navbar-list ">
-                            <li><a href="#">qualcosa</a></li>
-                            <li><a href="#">qualcosa</a></li>
-                            <li><a href="#">qualcosa</a></li>
-                            <li><a href="#">qualcosa</a></li>
-                            <li><a href="#" class="button">qualcosa</a></li>
+                            <li><a href="#">Lorem</a></li>
+                            <li><a href="#">Lorem</a></li>
+                            <li><a href="#">Lorem</a></li>
+                            <li><a href="#">Lorem</a></li>
+                            <li><a href="#" class="button">Get Started</a></li>
                         </ul>
                     </div>
                 </div>
