--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/8258ac6aa5.js" crossorigin="anonymous"></script>
 
 </head>
-<body class="debug">
+<body >
     <!-- header -->
     <header class="page-header">
         <!-- navbar -->
@@ -38,8 +38,95 @@
         </nav>
     </header>
     <!-- main -->
-    <main>
-
+    <main class=" main-page">
+        <div class="hero">
+            <div class="container">
+                <div class="row">
+                    <div class="col-8">
+                        <div class="card-hero">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div>
+                                        <h4 class="title-card">Lorem ipsum dolor sit.</h4>
+                                        <p class="paragraph-card">
+                                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis adipisci quaerat molestiae voluptatem! Deserunt, magni!
+                                        </p>
+                                    </div>
+                                    <div>
+                                        <a class="button button-blue" href="#"><i class="fa-brands fa-apple apple" style="color: #ffffff;"></i> App Store</a>
+                                    </div>
+                                </div>
+                                <div class="col-6 no-padding">
+                                    <figure class="img-card">
+                                        <img src="./img/phone.png" alt="">
+                                    </figure>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-hero">
+                            <div class="icon-card">
+                                <i class="fa-solid fa-compass-drafting" style="color: #0084FD;"></i>
+                            </div>
+                            <div>
+                                <h4 class="title-card">
+                                    Lorem ipsum dolor sit.
+                                </h4>
+                                <p class="paragraph-card">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis adipisci quaerat molestiae voluptatem! Deserunt, magni!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-hero">
+                            <div class="icon-card">
+                                <i class="fa-regular fa-file-code" style="color: #0084FD;"></i>
+                            </div>
+                            <div>
+                                <h4 class="title-card">
+                                    Lorem ipsum dolor sit.
+                                </h4>
+                                <p class="paragraph-card">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis adipisci quaerat molestiae voluptatem! Deserunt, magni!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-hero">
+                            <div class="icon-card">
+                                <i class="fa-solid fa-laptop-code" style="color: #0084FD;"></i>
+                            </div>
+                            <div>
+                                <h4 class="title-card">
+                                    Lorem ipsum dolor sit.
+                                </h4>
+                                <p class="paragraph-card">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis adipisci quaerat molestiae voluptatem! Deserunt, magni!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-hero">
+                            <div class="icon-card">
+                                <i class="fa-solid fa-bullhorn" style="color: #0084FD;"></i>
+                            </div>
+                            <div>
+                                <h4 class="title-card">
+                                    Lorem ipsum dolor sit.
+                                </h4>
+                                <p class="paragraph-card ">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis adipisci quaerat molestiae voluptatem! Deserunt, magni!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- footer -->
     <footer>
