--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <div class="row">
                     <div class="col-8">
                         <div class="card-hero">
-                            <div class="row">
-                                <div class="col-6">
+                            <div class="row row-card-hero-tablet">
+                                <div class="col-6 ">
                                     <div>
                                         <h4 class="title-card">Lorem ipsum dolor sit.</h4>
                                         <p class="paragraph-card">
@@ -57,9 +57,11 @@
                                     </div>
                                 </div>
                                 <div class="col-6 no-padding">
-                                    <figure class="img-card">
-                                        <img src="./img/phone.png" alt="">
-                                    </figure>
+                                    <div class="row justify-center">
+                                        <figure class="img-card">
+                                            <img src="./img/phone.png" alt="">
+                                        </figure>
+                                    </div>
                                 </div>
                             </div>
                         </div>
