--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     </header>
     <!-- main -->
     <main class=" main-page">
-        <div class="hero">
+        <!-- HERO SECTION -->
+        <section class="hero">
             <div class="container">
                 <div class="row">
                     <div class="col-8">
@@ -128,7 +129,33 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <!-- STRATEGIC PLANNER -->
+        <section class="debug strategic-planner">
+            <div class="container-small">
+                <div class="row">
+                    <div class="col-6">
+                        <figure>
+                            <img class="planning-img" src="./img/planning1.png" alt="">
+                        </figure>
+                        <div>
+                            <h3 class="planning-title">Strategic planning</h3>
+                            <p class="planning-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam suscipit perferendis aspernatur voluptas quia consequatur ratione sit obcaecati quo odit deleniti magni culpa sed, ipsum accusamus! Hic, similique. Veniam, vel!</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="row">
+                            <div class="col-8">
+                                <figure>
+                                    <img src="" alt="">
+                                </figure>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer -->
     <footer>
