ADD: card developement

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <!-- STRATEGIC PLANNER -->
         <section class="debug strategic-planner">
             <div class="container-small">
-                <div class="row">
+                <div class="row row-planner">
                     <div class="col-6">
                         <figure>
                             <img class="planning-img" src="./img/planning1.png" alt="">
@@ -143,13 +143,21 @@
                             <p class="planning-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam suscipit perferendis aspernatur voluptas quia consequatur ratione sit obcaecati quo odit deleniti magni culpa sed, ipsum accusamus! Hic, similique. Veniam, vel!</p>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="row">
-                            <div class="col-8">
-                                <figure>
-                                    <img src="" alt="">
-                                </figure>
-
+                    <div class="col-4 developement-section">
+                        <div class="row ">
+                            <div class="card-developement">
+                            <div class="row ">
+                                    <div>
+                                        <figure>
+                                            <img src="./img/planning2.png" alt="">
+                                        </figure>
+                                    </div>
+                                    <div>
+                                        <h4 class="card-title-developement">Add Developement</h4>
+                                        <p class="card-paragraph-developement"><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, recusandae. Quam aliquam quo nemo fuga hic.</em></p>
+                                        <i class="fa-solid fa-arrow-down arrow-down" style="color: #000000;"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
