--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
         </section>
         <!-- STRATEGIC PLANNER -->
-        <section class="debug strategic-planner">
+        <section class="strategic-planner">
             <div class="container-small">
                 <div class="row row-planner">
                     <div class="col-6">
@@ -143,12 +143,12 @@
                             <p class="planning-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam suscipit perferendis aspernatur voluptas quia consequatur ratione sit obcaecati quo odit deleniti magni culpa sed, ipsum accusamus! Hic, similique. Veniam, vel!</p>
                         </div>
                     </div>
-                    <div class="col-4 developement-section">
+                    <div class="col-6 developement-section">
                         <div class="row ">
                             <div class="card-developement">
                             <div class="row ">
                                     <div>
-                                        <figure>
+                                        <figure class="img-developement">
                                             <img src="./img/planning2.png" alt="">
                                         </figure>
                                     </div>
