--- a/index.html
+++ b/index.html
@@ -164,6 +164,71 @@
                 </div>
             </div>
         </section>
+        <!--TESTIMONIALS-->
+        <section class="debug tesimonials">
+            <div class="container">
+                <div>
+                    <h5>Testimonial</h5>
+                    <h2>We are committed expert partners</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore, vitae eveniet odit eaque porro, quisquam nulla iusto minus explicabo tempora est! Voluptatem minima tempora aperiam perferendis?</p>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="cards-testimonials " >
+                            <div class="row">
+                                <div class="col-2">
+                                    <figure class="circular-portrait">
+                                        <img class="img-testimonials" src="./img/testimonial1.jpg" alt="">
+                                    </figure>
+                                </div>
+                                <div class="col-8">
+                                    <div>
+                                        <q class="quote-testimonial">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi!</q>
+                                        <p class="name-testimonial">Nat Reynolds</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="cards-testimonials " >
+                            <div class="row">
+                                <div class="col-2">
+                                    <figure class="circular-portrait">
+                                        <img class="img-testimonials" src="./img/testimonial2.jpg" alt="">
+                                    </figure>
+                                </div>
+                                <div class="col-8">
+                                    <div>
+                                        <q class="quote-testimonial">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi!</q>
+                                        <p class="name-testimonial">Nat Reynolds</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="cards-testimonials " >
+                            <div class="row">
+                                <div class="col-2">
+                                    <figure class="circular-portrait">
+                                        <img class="img-testimonials" src="./img/testimonial3.jpg" alt="">
+                                    </figure>
+                                </div>
+                                <div class="col-8">
+                                    <div>
+                                        <q class="quote-testimonial">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi!</q>
+                                        <p class="name-testimonial">Nat Reynolds</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
     </main>
     <!-- footer -->
     <footer>
