ADD: testimonials  media

--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
             </div>
         </section>
         <!--TESTIMONIALS-->
-        <section class="debug tesimonials">
+        <section class="tesimonials">
             <div class="container">
-                <div>
-                    <h5>Testimonial</h5>
-                    <h2>We are committed expert partners</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore, vitae eveniet odit eaque porro, quisquam nulla iusto minus explicabo tempora est! Voluptatem minima tempora aperiam perferendis?</p>
+                <div class="main-testimonial">
+                    <h5 class="main-section">Testimonial</h5>
+                    <h2 class="main-title">We are committed expert partners</h2>
+                    <p class="main-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore, vitae eveniet odit eaque porro, quisquam nulla iusto minus explicabo tempora est! Voluptatem minima tempora aperiam perferendis?</p>
                 </div>
                 <div class="row">
                     <div class="col-12">
@@ -201,7 +201,7 @@
                                 <div class="col-8">
                                     <div>
                                         <q class="quote-testimonial">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi!</q>
-                                        <p class="name-testimonial">Nat Reynolds</p>
+                                        <p class="name-testimonial">Julia Reynolds</p>
                                     </div>
                                 </div>
                             </div>
@@ -229,6 +229,7 @@
             </div>
 
         </section>
+        <!---->
     </main>
     <!-- footer -->
     <footer>
