--- a/index.html
+++ b/index.html
@@ -229,7 +229,31 @@
             </div>
 
         </section>
-        <!---->
+        <!-- BENEFITS -->
+        <section class="debug benefits">
+            <div class="container">
+                <h2>Benefits of working with us</h2>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="card-benefits">
+                            <div>
+                                <h3 class="number-card-benefits">01</h3>
+                            </div>
+                            <div class="body-card-benefits">
+                                <h4 class="title-card-benefits">Hight Quality</h4>
+                                <p class="paragraph-card-benefits">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi recusandae praesentium laboriosam error ipsam veniam voluptatem quo inventore itaque ut!
+                                </p>
+                            </div>
+                            <div>
+                                <a class="button button-purple" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer -->
     <footer>
