ADD: benefits media table

--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
 
         </section>
         <!-- BENEFITS -->
-        <section class="debug benefits">
+        <section class="benefits">
             <div class="container">
-                <h2>Benefits of working with us</h2>
+                <h2 class="title-benefits">Benefits of working with us</h2>
                 <div class="row">
                     <div class="col-4">
                         <div class="card-benefits">
@@ -250,7 +250,86 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="col-4">
+                        <div class="card-benefits">
+                            <div>
+                                <h3 class="number-card-benefits">02</h3>
+                            </div>
+                            <div class="body-card-benefits">
+                                <h4 class="title-card-benefits">Creative Team</h4>
+                                <p class="paragraph-card-benefits">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi recusandae praesentium laboriosam error ipsam veniam voluptatem quo inventore itaque ut!
+                                </p>
+                            </div>
+                            <div>
+                                <a class="button button-purple" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-benefits">
+                            <div>
+                                <h3 class="number-card-benefits">03</h3>
+                            </div>
+                            <div class="body-card-benefits">
+                                <h4 class="title-card-benefits">Amazing Results</h4>
+                                <p class="paragraph-card-benefits">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi recusandae praesentium laboriosam error ipsam veniam voluptatem quo inventore itaque ut!
+                                </p>
+                            </div>
+                            <div>
+                                <a class="button button-purple" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-benefits">
+                            <div>
+                                <h3 class="number-card-benefits">04</h3>
+                            </div>
+                            <div class="body-card-benefits">
+                                <h4 class="title-card-benefits">Best Pricing</h4>
+                                <p class="paragraph-card-benefits">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi recusandae praesentium laboriosam error ipsam veniam voluptatem quo inventore itaque ut!
+                                </p>
+                            </div>
+                            <div>
+                                <a class="button button-purple" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-benefits">
+                            <div>
+                                <h3 class="number-card-benefits">05</h3>
+                            </div>
+                            <div class="body-card-benefits">
+                                <h4 class="title-card-benefits">Innovations</h4>
+                                <p class="paragraph-card-benefits">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi recusandae praesentium laboriosam error ipsam veniam voluptatem quo inventore itaque ut!
+                                </p>
+                            </div>
+                            <div>
+                                <a class="button button-purple" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-benefits">
+                            <div>
+                                <h3 class="number-card-benefits">06</h3>
+                            </div>
+                            <div class="body-card-benefits">
+                                <h4 class="title-card-benefits">24/7 Support</h4>
+                                <p class="paragraph-card-benefits">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi recusandae praesentium laboriosam error ipsam veniam voluptatem quo inventore itaque ut!
+                                </p>
+                            </div>
+                            <div>
+                                <a class="button button-purple" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
