ADD: benefits media mobile

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-8">
+                        <!--1 card and img-->
                         <div class="card-hero">
                             <div class="row row-card-hero-tablet">
                                 <div class="col-6 ">
@@ -68,6 +69,7 @@
                         </div>
                     </div>
                     <div class="col-4">
+                        <!--2 card-->
                         <div class="card-hero">
                             <div class="icon-card">
                                 <i class="fa-solid fa-compass-drafting" style="color: #0084FD;"></i>
@@ -83,6 +85,7 @@
                         </div>
                     </div>
                     <div class="col-4">
+                        <!--3 card-->
                         <div class="card-hero">
                             <div class="icon-card">
                                 <i class="fa-regular fa-file-code" style="color: #0084FD;"></i>
@@ -98,6 +101,7 @@
                         </div>
                     </div>
                     <div class="col-4">
+                        <!--4 card-->
                         <div class="card-hero">
                             <div class="icon-card">
                                 <i class="fa-solid fa-laptop-code" style="color: #0084FD;"></i>
@@ -113,6 +117,7 @@
                         </div>
                     </div>
                     <div class="col-4">
+                        <!--5 card-->
                         <div class="card-hero">
                             <div class="icon-card">
                                 <i class="fa-solid fa-bullhorn" style="color: #0084FD;"></i>
