ADD: comments in html

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         <section class="strategic-planner">
             <div class="container-small">
                 <div class="row row-planner">
+                    <!--col planning and img-->
                     <div class="col-6">
                         <figure>
                             <img class="planning-img" src="./img/planning1.png" alt="">
@@ -148,6 +149,7 @@
                             <p class="planning-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam suscipit perferendis aspernatur voluptas quia consequatur ratione sit obcaecati quo odit deleniti magni culpa sed, ipsum accusamus! Hic, similique. Veniam, vel!</p>
                         </div>
                     </div>
+                    <!--col developement and img -->
                     <div class="col-6 developement-section">
                         <div class="row ">
                             <div class="card-developement">
@@ -172,12 +174,15 @@
         <!--TESTIMONIALS-->
         <section class="tesimonials">
             <div class="container">
+                <!--subtitle / title / paragraph-->
                 <div class="main-testimonial">
                     <h5 class="main-section">Testimonial</h5>
                     <h2 class="main-title">We are committed expert partners</h2>
                     <p class="main-paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore, vitae eveniet odit eaque porro, quisquam nulla iusto minus explicabo tempora est! Voluptatem minima tempora aperiam perferendis?</p>
                 </div>
+                <!-- card testimonials-->
                 <div class="row">
+                 <!--1 card -->
                     <div class="col-12">
                         <div class="cards-testimonials " >
                             <div class="row">
@@ -195,6 +200,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--2 card-->
                     <div class="col-12">
                         <div class="cards-testimonials " >
                             <div class="row">
@@ -212,6 +218,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--3 card-->
                     <div class="col-12">
                         <div class="cards-testimonials " >
                             <div class="row">
@@ -237,8 +244,11 @@
         <!-- BENEFITS -->
         <section class="benefits">
             <div class="container">
+                <!--title benefits-->
                 <h2 class="title-benefits">Benefits of working with us</h2>
+                <!--card benefits-->
                 <div class="row">
+                    <!--1 card-->
                     <div class="col-4">
                         <div class="card-benefits">
                             <div>
@@ -255,6 +265,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--2 card-->
                     <div class="col-4">
                         <div class="card-benefits">
                             <div>
@@ -271,6 +282,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--3 card-->
                     <div class="col-4">
                         <div class="card-benefits">
                             <div>
@@ -287,6 +299,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--4 card-->
                     <div class="col-4">
                         <div class="card-benefits">
                             <div>
@@ -303,6 +316,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--5 card-->
                     <div class="col-4">
                         <div class="card-benefits">
                             <div>
@@ -319,6 +333,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--6 card-->
                     <div class="col-4">
                         <div class="card-benefits">
                             <div>
