ADD: layout company biography

--- a/index.html
+++ b/index.html
@@ -152,17 +152,20 @@
                     <!--col developement and img -->
                     <div class="col-6 developement-section">
                         <div class="row ">
-                            <div class="card-developement">
-                            <div class="row ">
-                                    <div>
-                                        <figure class="img-developement">
-                                            <img src="./img/planning2.png" alt="">
-                                        </figure>
-                                    </div>
-                                    <div>
-                                        <h4 class="card-title-developement">Add Developement</h4>
-                                        <p class="card-paragraph-developement"><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, recusandae. Quam aliquam quo nemo fuga hic.</em></p>
-                                        <i class="fa-solid fa-arrow-down arrow-down" style="color: #000000;"></i>
+                            <div class="col-4">
+                                <div class="card-developement">
+                                    <div class="row ">
+                                            <div>
+                                                <figure class="img-developement">
+                                                    <img src="./img/planning2.png" alt="">
+                                                </figure>
+                                            </div>
+                                            <div>
+                                                <h4 class="card-title-developement">Add Developement</h4>
+                                                <p class="card-paragraph-developement"><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, recusandae. Quam aliquam quo nemo fuga hic.</em></p>
+                                                <i class="fa-solid fa-arrow-down arrow-down" style="color: #000000;"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -347,6 +350,29 @@
                             </div>
                             <div>
                                 <a class="button button-purple" href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ABOUT US -->
+        <section class="debug company-biography">
+            <div class="container-medium">
+                <div class="row">
+                    <div class="col-8">
+                        <h2 class="title-biography">About Us</h2>
+                        <p class="description-biography-top ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit mollitia nesciunt, possimus porro fugiat quam veritatis consequatur. Ullam dicta alias ut libero numquam deserunt ex quam repellat magni! Recusandae, iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt repellat fugit autem perferendis unde, nostrum, quasi eum dicta eveniet inventore iste accusamus labore distinctio ut laudantium asperiores earum officiis atque.</p>
+                        <p class="description-biography-bottom">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quasi sunt quaerat quas quisquam officiis autem excepturi consequatur quidem iste ullam, mollitia sit cupiditate dolor a recusandae soluta nostrum doloremque.</p>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-biography">
+                            <div class="row justify-center">
+                                <figure>
+                                    <img class="img-biography" src="./img/about.jpg" alt="">
+                                </figure>
+                                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, corrupti!</h4>
+                                <a href="#">Find me on linkedin</a>
                             </div>
                         </div>
                     </div>
