ADD: card biography

--- a/index.html
+++ b/index.html
@@ -367,11 +367,11 @@
                     </div>
                     <div class="col-4">
                         <div class="card-biography">
-                            <div class="row justify-center">
+                            <div class="row-card-biography">
                                 <figure>
                                     <img class="img-biography" src="./img/about.jpg" alt="">
                                 </figure>
-                                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, corrupti!</h4>
+                                <h4 class="title-card-biography">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, corrupti!</h4>
                                 <a href="#">Find me on linkedin</a>
                             </div>
                         </div>
