ADD: sect. about us media tabl. mobile

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             </div>
         </section>
         <!-- ABOUT US -->
-        <section class="debug company-biography">
+        <section class="company-biography">
             <div class="container-medium">
                 <div class="row">
                     <div class="col-8">
@@ -372,7 +372,7 @@
                                     <img class="img-biography" src="./img/about.jpg" alt="">
                                 </figure>
                                 <h4 class="title-card-biography">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, corrupti!</h4>
-                                <a href="#">Find me on linkedin</a>
+                                <a class="button-card-biography" href="#"><i class="fa-brands fa-linkedin linkedin" style="color: white;"></i> Find me on linkedin</a>
                             </div>
                         </div>
                     </div>
