ADD: layout get started

--- a/index.html
+++ b/index.html
@@ -379,6 +379,21 @@
                 </div>
             </div>
         </section>
+        <!-- FREE -->
+        <section class="debug get-started">
+            <div class="container-small">
+                <div class="row">
+                    <div>
+                        <h5 class="header-started">Get Started</h5>
+                        <h3 class="">Simple, Trasparent Pricing</h3>
+                        <h2 class="">It's Free!</h2>
+                        <p class="paragraph-started">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus amet a nobis? Eveniet ut, est quae a beatae alias unde! perferendis?</p>
+                        <a class="button" href="#">Get Started</a>
+                        <p class="paragraph-started">Copyright 2021 Boolean &#x2022; Classe 106 &#x2022; <a href="#">Privacy policy</a></p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer -->
     <footer>
