ADD: style sect. get started

--- a/index.html
+++ b/index.html
@@ -382,14 +382,24 @@
         <!-- FREE -->
         <section class="debug get-started">
             <div class="container-small">
-                <div class="row">
-                    <div>
-                        <h5 class="header-started">Get Started</h5>
-                        <h3 class="">Simple, Trasparent Pricing</h3>
-                        <h2 class="">It's Free!</h2>
-                        <p class="paragraph-started">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus amet a nobis? Eveniet ut, est quae a beatae alias unde! perferendis?</p>
-                        <a class="button" href="#">Get Started</a>
-                        <p class="paragraph-started">Copyright 2021 Boolean &#x2022; Classe 106 &#x2022; <a href="#">Privacy policy</a></p>
+                <div class="row-started">
+                    <div class="col-12">
+                        <div>
+                            <h5 class="header-started">Get Started</h5>
+                        </div>
+                        <div>
+                            <h3 class="title-started">Simple, Trasparent Pricing</h3>
+                        </div>
+                        <div>
+                            <h2 class="important-started">It's Free!</h2>
+                        </div>
+                        <div>
+                            <p class="paragraph-started">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus amet a nobis? Eveniet ut, est quae a beatae alias unde! perferendis?</p>
+                            <a class="button button-started" href="#">Get Started</a>
+                        </div>
+                        <div>
+                            <p class="paragraph-started">Copyright 2021 Boolean &#x2022; Classe 106 &#x2022; <a class="a-underline" href="#">Privacy policy</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
