ADD: sect. get started media tabl. mobile

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             </div>
         </section>
         <!-- FREE -->
-        <section class="debug get-started">
+        <section class="get-started">
             <div class="container-small">
                 <div class="row-started">
                     <div class="col-12">
