ADD: q-left in img card biography

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                 </div>
                                 <div class="col-8">
                                     <div>
-                                        <q class="quote-testimonial">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi!</q>
+                                        <q class="quote-testimonial"><span class="q-left"><i class="fa-solid fa-quote-left" style="color: #ffffff;"></i></span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi! <span class="q-right"><i class="fa-solid fa-quote-right" style="color: #ffffff;"></i></span></q>
                                         <p class="name-testimonial">Nat Reynolds</p>
                                     </div>
                                 </div>
@@ -214,7 +214,7 @@
                                 </div>
                                 <div class="col-8">
                                     <div>
-                                        <q class="quote-testimonial">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi!</q>
+                                        <q class="quote-testimonial"><span class="q-left"><i class="fa-solid fa-quote-left" style="color: #ffffff;"></i></span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi!<span class="q-right"><i class="fa-solid fa-quote-right" style="color: #ffffff;"></i></span></q>
                                         <p class="name-testimonial">Julia Reynolds</p>
                                     </div>
                                 </div>
@@ -232,7 +232,7 @@
                                 </div>
                                 <div class="col-8">
                                     <div>
-                                        <q class="quote-testimonial">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi!</q>
+                                        <q class="quote-testimonial"><span class="q-left"><i class="fa-solid fa-quote-left" style="color: #ffffff;"></i></span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit doloribus, vitae, natus eos harum optio ad voluptatum molestiae fuga nam rerum nisi!<span class="q-right"><i class="fa-solid fa-quote-right" style="color: #ffffff;"></i></span></q>
                                         <p class="name-testimonial">Nat Reynolds</p>
                                     </div>
                                 </div>
@@ -368,8 +368,9 @@
                     <div class="col-4">
                         <div class="card-biography">
                             <div class="row-card-biography">
-                                <figure>
+                                <figure class="figure-relative">
                                     <img class="img-biography" src="./img/about.jpg" alt="">
+                                    <span class="about-q-left"><i class="fa-solid fa-quote-left" style="color: #9792E4;;"></i></span>
                                 </figure>
                                 <h4 class="title-card-biography">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, corrupti!</h4>
                                 <a class="button-card-biography" href="#"><i class="fa-brands fa-linkedin linkedin" style="color: white;"></i> Find me on linkedin</a>
