ADD: layout footer

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 </div>
             </div>
         </section>
-        <!-- FREE -->
+        <!-- GET STARTED -->
         <section class="get-started">
             <div class="container-small">
                 <div class="row-started">
@@ -407,8 +407,20 @@
         </section>
     </main>
     <!-- footer -->
-    <footer>
+    <footer class="end-page">
+        <div class="container-small">
+            <div class="top-footer">
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio provident natus culpa libero earum magnam itaque quos ex. Possimus, amet!
+                </p>
+            </div>
+            <div class="bottom-footer">
+                <p>
+                    <a class="a-footer" href="#">Lorem ipsum</a> dolor sit amet consectetur <a class="a-footer" href="#">adipisicing elit.</a>
+                </p>
+            </div>
 
+        </div>
     </footer>
 
     
