FIX: button card developement

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                         </p>
                                     </div>
                                     <div>
-                                        <a class="button button-blue" href="#"><i class="fa-brands fa-apple apple" style="color: #ffffff;"></i> App Store</a>
+                                        <a class="button button-blue" href="#"><span class="apple"><i class="fa-brands fa-apple " style="color: #ffffff;"></i></span> App Store</a>
                                     </div>
                                 </div>
                                 <div class="col-6 no-padding">
@@ -154,7 +154,7 @@
                         <div class="row ">
                             <div class="col-4">
                                 <div class="card-developement">
-                                    <div class="row ">
+                                    <div class="row-card-developement ">
                                             <div>
                                                 <figure class="img-developement">
                                                     <img src="./img/planning2.png" alt="">
@@ -163,7 +163,9 @@
                                             <div>
                                                 <h4 class="card-title-developement">Add Developement</h4>
                                                 <p class="card-paragraph-developement"><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, recusandae. Quam aliquam quo nemo fuga hic.</em></p>
-                                                <i class="fa-solid fa-arrow-down arrow-down" style="color: #000000;"></i>
+                                            <div>
+                                                <span class="arrow-down"><a href="#"><i class="fa-solid fa-arrow-down" style="color: #000000;"></i></a></span>
+                                            </div>
                                             </div>
                                         </div>
                                     </div>
@@ -406,7 +408,7 @@
             </div>
         </section>
     </main>
-    <!-- footer -->
+    <!-- END PAGE -->
     <footer class="end-page">
         <div class="container-small">
             <div class="top-footer">
@@ -422,7 +424,5 @@
 
         </div>
     </footer>
-
-    
 </body>
 </html>
